# miso-component-example

./: README.md  default.nix  miso-components-example.cabal  miso-transition-example.cabal  nixpkgs.nix  pkg.nix  stack.yaml
src/: Button.hs  Main.hs
src/Miso/: Transition.hs
