name:                miso-components-example
version:             0.1.0.0
synopsis:            Components example for Miso
author:              Bas van Dijk, Falco Peijnenburg
maintainer:          fpeijnenburg@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is:
    Main.hs

  ghcjs-options:
    -dedupe

  hs-source-dirs:
    src

  build-depends:
    base < 5,
    lens,
    miso,
    mtl,
    transformers

  default-language:
    Haskell2010
